2015-09-24 Fernando de Oliveira <famobr at yahoo.com.br>
   * Fix again sddm bootscript.

2015-09-24 Fernando de Oliveira <famobr at yahoo.com.br>
   * Remove sddm fixes for upowerd.

2015-08-23 Fernando de Oliveira <famobr at yahoo.com.br>
   * Fix sddm for upowerd stop.

2015-08-15 Fernando de Oliveira <famobr at yahoo.com.br>
   * Add upowerd to sddm bootscript, for buttons to work (halt, reboot, etc.).
   * Fix lxdm uninstall target.

2015-08-01 Fernando de Oliveira <famobr at yahoo.com.br>
   * Add sddm bootscript
   * Reorder part of the Makefile.

2015-03-04 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Add uninstall for rpcbind

2015-02-09 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Fix nfs-client and nfs-server for recent nfs-utils

2015-01-04 Ken Moffat <ken@linuxfromscratch.org>
   * Remove lingering umount /proc/fs/nfsd from nfs-server.

2014-09-01 Fernando de Oliveira <famobr@yahoo.com.br>
   * Include uninstall option to wicd

2014-11-12 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Ensure blfs/sysconfig/bluetooth is installed

2014-10-11 Igor Živković <contact@igor-zivkovic.from.hr>
   * Improve mysql script portability

2014-10-08 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Fix typo in Makefile

2014-09-19 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Add stop option to haveged script

2014-09-11 Ken Moffat <ken@linuxfromscratch.org>
   * Spelling fix when lxdm stops

2014-09-02 Fernando de Oliveira <famobr@yahoo.com.br>
   * Fix starting runlevel of lxdm bootscript (revert to the first version committed)

2014-09-01 Fernando de Oliveira <famobr@yahoo.com.br>
   * Fix starting runlevel of lxdm bootscript

2014-09-01 Fernando de Oliveira <famobr@yahoo.com.br>
   * Add lxdm bootscript

2014-08-27 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Don't try to delete non-existant PID file in dhclient

2014-08-08 Ken Moffat <ken@linuxfromscratch.org>
   * Fix spacing in dhclient messages

2014-08-07 Bruce Dubbs <bdubbs@linuxfromscratch.org>