@@ -51,6 +51,7 @@
 <!ENTITY gptfdisk-version             "1.0.1">
 <!ENTITY parted-version               "3.2">
 <!ENTITY reiser-version               "3.6.24">
+<!ENTITY smartmontools-version        "6.4">
 <!ENTITY sshfs-fuse-version           "2.5">
 <!ENTITY sshfs-fuse-download-version  "2_5">
 <!ENTITY xfsprogs-version             "4.5.0">
@@ -431,7 +432,7 @@
 <!ENTITY sendmail-version             "8.15.2">
 
 <!-- Chapter 22 -->
-<!ENTITY db-version                   "6.1.26">
+<!ENTITY db-version                   "6.2.23">
 <!ENTITY lmdb-version                 "0.9.18">
 <!ENTITY mariadb-version              "10.1.13">
 <!ENTITY postgresql-version           "9.5.2">
@@ -490,7 +491,7 @@
 <!ENTITY gtk3-version                 "3.20.3">
 <!ENTITY gtk-engines-version          "2.20.2">
 <!ENTITY gtkmm2-version               "2.24.4">
-<!ENTITY gtkmm3-version               "3.20.0">
+<!ENTITY gtkmm3-version               "3.20.1">
 <!ENTITY gtksourceview-version        "3.20.1">
 <!ENTITY imlib2-version               "1.4.8">
 <!ENTITY keybinder2-version           "0.3.0">
@@ -504,7 +505,7 @@
 <!ENTITY shared-mime-info-version     "1.6">
 <!ENTITY startup-notification-version "0.12">
 <!ENTITY webkitgtk2-version           "2.4.10">    <!-- Even minors only -->
-<!ENTITY webkitgtk-version            "2.12.0">    <!-- Even minors only -->
+<!ENTITY webkitgtk-version            "2.12.1">    <!-- Even minors only -->
 
 <!ENTITY gtk2-libdir                  "2.0/2.10.0">
 <!ENTITY qt4-dir                      "$QT4DIR">
