@@ -33,6 +33,7 @@ $Date$
   <xi:include xmlns:xi="http://www.w3.org/2001/XInclude" href="gptfdisk.xml"/>
   <xi:include xmlns:xi="http://www.w3.org/2001/XInclude" href="parted.xml"/>
   <xi:include xmlns:xi="http://www.w3.org/2001/XInclude" href="reiser.xml"/>
+  <xi:include xmlns:xi="http://www.w3.org/2001/XInclude" href="smartmontools.xml"/>
   <xi:include xmlns:xi="http://www.w3.org/2001/XInclude" href="sshfs-fuse.xml"/>
   <xi:include xmlns:xi="http://www.w3.org/2001/XInclude" href="xfsprogs.xml"/>
 
