@@ -1,0 +1,203 @@
+<?xml version="1.0" encoding="ISO-8859-1"?>
+<!DOCTYPE sect1 PUBLIC "-//OASIS//DTD DocBook XML V4.5//EN"
+   "http://www.oasis-open.org/docbook/xml/4.5/docbookx.dtd" [
+  <!ENTITY % general-entities SYSTEM "../../general.ent">
+  %general-entities;
+
+  <!ENTITY smartmontools-download-http
+    "&sourceforge-repo2;/projects/smartmontools/files/smartmontools/&smartmontools-version;/smartmontools-&smartmontools-version;.tar.gz">
+  <!ENTITY smartmontools-download-ftp  " ">
+  <!ENTITY smartmontools-md5sum        "56812c8312fd123ed40ef65afde1049e">
+  <!ENTITY smartmontools-size          "804 KB">
+  <!ENTITY smartmontools-buildsize     "18 MB">
+  <!ENTITY smartmontools-time          "0.1 SBU">
+]>
+
+<sect1 id="smartmontools" xreflabel="smartmontools-&smartmontools-version;">
+  <?dbhtml filename="smartmontools.html"?>
+
+  <sect1info>
+    <othername>$LastChangedBy$</othername>
+    <date>$Date$</date>
+  </sect1info>
+
+  <title>smartmontools-&smartmontools-version;</title>
+
+  <indexterm zone="smartmontools">
+    <primary sortas="a-smartmontools">smartmontools</primary>
+  </indexterm>
+
+  <sect2 role="package">
+    <title>Introduction to smartmontools</title>
+
+    <para>
+      The <application>smartmontools</application> package contains utility
+      programs (smartctl, smartd) to control/monitor storage systems using the
+      Self-Monitoring, Analysis and Reporting Technology System (S.M.A.R.T.)
+      built into most modern ATA and SCSI disks. 
+    </para>
+
+    &lfs79_checked;
+
+    <bridgehead renderas="sect3">Package Information</bridgehead>
+    <itemizedlist spacing="compact">
+      <listitem>
+        <para>Download (HTTP): <ulink url="&smartmontools-download-http;"/></para>
+      </listitem>
+      <listitem>
+        <para>Download (FTP): <ulink url="&smartmontools-download-ftp;"/></para>
+      </listitem>
+      <listitem>
+        <para>Download MD5 sum: &smartmontools-md5sum;</para>
+      </listitem>
+      <listitem>
+        <para>Download size: &smartmontools-size;</para>
+      </listitem>
+      <listitem>
+        <para>Estimated disk space required: &smartmontools-buildsize;</para>
+      </listitem>
+      <listitem>
+        <para>Estimated build time: &smartmontools-time;</para>
+      </listitem>
+    </itemizedlist>
+
+    <bridgehead renderas="sect3">smartmontools Dependencies</bridgehead>
+
+    <bridgehead renderas="sect4">Optional (runtime)</bridgehead>
+    <para role="optional">
+      <xref linkend="curl"/> or
+      <xref linkend="lynx"/> or
+      <xref linkend="wget"/> (download tools)
+    </para>
+
+    <para condition="html" role="usernotes">
+      User Notes: <ulink url="&blfs-wiki;/gptdisk"/>
+    </para>
+  </sect2>
+
+  <sect2 role="installation">
+    <title>Installation of smartmontools</title>
+
+    <para>
+      Install <application>smartmontools</application> by running the 
+      following commands:
+    </para>
+
+<screen><userinput>./configure --prefix=/usr           \
+            --sysconfdir=/etc       \
+            --with-initscriptdir=no \
+            --docdir=/usr/share/doc/smartmontools-&smartmontools-version; &amp;&amp;
+make</userinput></screen>
+
+    <para>This package does not come with a test suite.</para>
+
+    <para>
+      Now, as the <systemitem class="username">root</systemitem> user:
+    </para>
+
+<screen role="root"><userinput>make install</userinput></screen>
+
+    <sect3>
+      <title>Configuration Information</title>
+
+      <para>
+        See the embedded comments in <filename>/etc/smartd.conf</filename>
+        for detailed instructions on customizing the
+        <application>smartd</application> darmon.
+      </para>
+
+    </sect3>
+
+    <sect3  id="smartmontoools-init">
+      <title>Boot Script</title>
+
+      <para>
+        If you want the <application>smartd</application> daemon to
+        start automatically when the system is booted, install the
+        <filename>/etc/rc.d/init.d/smartd</filename> init script included
+        in the <xref linkend="bootscripts"/> package.
+      </para>
+
+      <indexterm zone="smartmontools smartmontoools-init">
+        <primary sortas="f-smartd">apache</primary>
+      </indexterm>
+
+<screen role="root"><userinput>make install-smartd</userinput></screen>
+
+    </sect3>
+
+  </sect2>
+
+  <sect2 role="commands">
+    <title>Command Explanations</title>
+
+    <para>
+      <option>--with-initscriptdir=no</option>: This option supresses the
+      default initialization script.  See below for the BLFS script.
+    </para>
+
+  </sect2>
+
+  <sect2 role="content">
+    <title>Contents</title>
+
+    <segmentedlist>
+      <segtitle>Installed Programs</segtitle>
+      <segtitle>Installed Libraries</segtitle>
+      <segtitle>Installed Directories</segtitle>
+
+      <seglistitem>
+        <seg>
+          smartctl, smartd, and update-smart-drivedb
+        </seg>
+
+        <seg>
+          None
+        </seg>
+
+        <seg>
+          /usr/share/smartmontools, /usr/share/doc/smartmontools-6.4, and
+          etc/smartd_warning.d
+        </seg>
+
+      </seglistitem>
+    </segmentedlist>
+
+    <variablelist>
+      <bridgehead renderas="sect3">Short Descriptions</bridgehead>
+      <?dbfo list-presentation="list"?>
+      <?dbhtml list-presentation="table"?>
+
+      <varlistentry id="smartctl">
+        <term><command>smartctl</command></term>
+        <listitem>
+          <para>is the control and monitor utility for SMART Disks.</para>
+          <indexterm zone="smartmontools smartctl">
+            <primary sortas="b-smartctl">smartctl</primary>
+          </indexterm>
+        </listitem>
+      </varlistentry>
+
+      <varlistentry id="smartd">
+        <term><command>smartd</command></term>
+        <listitem>
+          <para>is the SMART disk monitoring daemon.</para>
+          <indexterm zone="smartmontools smartd">
+            <primary sortas="b-smartd">smartd</primary>
+          </indexterm>
+        </listitem>
+      </varlistentry>
+
+      <varlistentry id="update-smart-drivedb">
+        <term><command>update-smart-drivedb</command></term>
+        <listitem>
+          <para>is th eupdate tool for the smartmontools drive database.</para>
+          <indexterm zone="smartmontools update-smart-drivedb">
+            <primary sortas="b-update-smart-drivedb">update-smart-drivedb</primary>
+          </indexterm>
+        </listitem>
+      </varlistentry>
+
+    </variablelist>
+  </sect2>
+</sect1>
