@@ -7,10 +7,10 @@
   <!ENTITY db-download-http
     "http://download.oracle.com/berkeley-db/db-&db-version;.tar.gz">
   <!ENTITY db-download-ftp  " ">
-  <!ENTITY db-md5sum        "9525aa57a282d49e5d1bf5e48ffa8a56">
-  <!ENTITY db-size          "36 MB">
-  <!ENTITY db-buildsize     "296 MB">
-  <!ENTITY db-time          "0.8 SBU">
+  <!ENTITY db-md5sum        "9da126afb937a48171ff1e569ce67cf1">
+  <!ENTITY db-size          "42 MB">
+  <!ENTITY db-buildsize     "334 MB">
+  <!ENTITY db-time          "0.7 SBU">
 ]>
 
 <sect1 id="db" xreflabel="Berkeley DB-&db-version;">
