@@ -6,10 +6,10 @@
 
   <!ENTITY gtkmm3-download-http "&gnome-download-http;/gtkmm/3.20/gtkmm-&gtkmm3-version;.tar.xz">
   <!ENTITY gtkmm3-download-ftp  "&gnome-download-ftp;/gtkmm/3.20/gtkmm-&gtkmm3-version;.tar.xz">
-  <!ENTITY gtkmm3-md5sum        "176b0611b42e97de49d7355cfb2fc914">
+  <!ENTITY gtkmm3-md5sum        "c08b2548f4e900e7a0299b76d6c86a13">
   <!ENTITY gtkmm3-size          "11.6 MB">
   <!ENTITY gtkmm3-buildsize     "393 MB (with tests)">
-  <!ENTITY gtkmm3-time          "5.2 SBU (with tests)">
+  <!ENTITY gtkmm3-time          "5.3 SBU (with tests)">
 ]>
 
 <sect1 id="gtkmm3" xreflabel="Gtkmm-&gtkmm3-version;">
